[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasktracker"
version = "0.1.0"
description = "A CLI task tracker with subtasks and recursion"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
[project.scripts]
tasktracker = "tasktracker.cli:main"